# madcool-dj

./: .env.example  .gitignore  README.md
control/: package-lock.json  package.json  tsconfig.json
control/scripts/: auth-smoke.ts  mcp-smoke.ts  roon-mock-smoke.ts  roon-smoke.ts  sources-smoke.ts
control/src/: auth.ts  bus.ts  engineClient.ts  index.ts  mcp-stdio.ts  mcp.ts  roon.ts  routes.ts  ws.ts
control/src/minimax/: client.ts  config.ts  index.ts  jobs.ts  prompt.ts
control/src/sources/: index.ts  local.ts  spotify.ts  tidal.ts  types.ts
control/src/types/: roon-api.d.ts
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: api.ts  dom.ts  main.ts  musicGen.ts  roonUi.ts  studio.ts  style.css  types.ts  wave.ts
docs/superpowers/plans/: 2026-07-18-madcool-dj-e2e-notes.md  (+4 more)
engine/: pyproject.toml
engine/src/madcool_dj_engine/: __init__.py  __main__.py  analyze.py  audio_out.py  autopilot.py  cache.py  commands.py  cue.py  decode.py  fx.py  library.py  mixer.py  paths.py  protocol.py  sampler.py  sequencer.py  studio.py  synth.py  telemetry.py
engine/tests/: test_analyze_smoke.py  test_cache.py  test_crossfade.py  test_cue.py  test_deck_transport.py  test_hardening.py  test_library_browse.py  test_mixer_block.py  test_protocol.py  test_scorer.py  test_studio.py  test_waveform.py
fixtures/dubstep/: LICENSE.txt  kit.json
scripts/: dev.sh  e2e-smoke.sh  make-dubstep-kit.py  make-fixtures.sh  roon-audio-mode.sh  verify.sh
scripts/systemd/: madcool-dj-control.service  madcool-dj-engine.service
(+1 files in other folders)
