[project]
name = "madcool-dj-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26",
  "sounddevice>=0.5",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
madcool-dj-engine = "madcool_dj_engine.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
